--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #4d4d4d;
 }
 
 @media screen and (max-width: 966px) {
